--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a href="https://instagram.com/neiltron" target="_blank">IG/Threads</a>.
             </p>
             <p>-----</p>
-            <p>Auramatch is an experiment in using machine learning to navigate a large image dataset. Many image search tools use semantic search to find similar images. This instead uses feature extraction which tends to highlight similar patterns or compositions between images. A bokeh shot of raindrops on a window could look like a photo of the galaxy or a overhead shot river might resemble the veins on a leaf.</p>
+            <p>Auramatch is an experiment in using machine learning to navigate a large image dataset. Many image search tools use semantic search to find similar images. This instead uses feature extraction which tends to highlight similar patterns or compositions between images. A bokeh shot of raindrops on a window could look like a photo of the galaxy. an overhead shot river might resemble the veins on a leaf.</p>
             <p>
                 In each group of images, the top left image is the "search query" and the rest of the images are the results. The results are not perfect, but they are sometimes interesting.
             </p>
