restructure to remove <dialog> element. thx firefox

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </nav>
     <div id="canvasDiv"></div>
 
-    <dialog>
+    <section id="dialog">
         <div id="dialog-inner">
             <p>
                 A prototype by Neil Pullman. Follow me on the various whatevers whatevers.
@@ -30,9 +30,12 @@
                 In each group of images, the top left image is the "search query" and the rest of the images are the results. The results are not perfect, but they are sometimes interesting.
             </p>
             <p>All photos are from <a href="https://unsplash.com">Unsplash</a> and it's community of talented photographers.</p>
-            <button id="close-modal">OKAY</button>
+            <p>
+                <button id="close-modal">OKAY</button>
+            </p>
         </div>
-    </dialog>
+        <div id="dialog-backdrop" />
+    </section>
 
     <script src="https://cdn.usefathom.com/script.js" data-site="RMMQVOJS" defer></script>
 </body>
